fix: resolve conflict User.java